; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_nicvf_queues.c_nicvf_unmap_rcv_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_nicvf_queues.c_nicvf_unmap_rcv_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nicvf = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.page = type { i32 }

@RCV_FRAG_LEN = common dso_local global i32 0, align 4
@XDP_PACKET_HEADROOM = common dso_local global i64 0, align 8
@PAGE_MASK = common dso_local global i32 0, align 4
@DMA_FROM_DEVICE = common dso_local global i32 0, align 4
@DMA_ATTR_SKIP_CPU_SYNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nicvf*, i32, i32, i32)* @nicvf_unmap_rcv_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nicvf_unmap_rcv_buffer(%struct.nicvf* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.nicvf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.page*, align 8
  %10 = alloca i32, align 4
  store %struct.nicvf* %0, %struct.nicvf** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store %struct.page* null, %struct.page** %9, align 8
  %11 = load i32, i32* @RCV_FRAG_LEN, align 4
  store i32 %11, i32* %10, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %31

14:                                               ; preds = %4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @phys_to_virt(i32 %15)
  %17 = call %struct.page* @virt_to_page(i32 %16)
  store %struct.page* %17, %struct.page** %9, align 8
  %18 = load %struct.page*, %struct.page** %9, align 8
  %19 = call i32 @page_ref_count(%struct.page* %18)
  %20 = icmp ne i32 %19, 1
  br i1 %20, label %21, label %22

21:                                               ; preds = %14
  br label %41

22:                                               ; preds = %14
  %23 = load i64, i64* @XDP_PACKET_HEADROOM, align 8
  %24 = load i32, i32* %10, align 4
  %25 = sext i32 %24 to i64
  %26 = add nsw i64 %25, %23
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* @PAGE_MASK, align 4
  %29 = load i32, i32* %6, align 4
  %30 = and i32 %29, %28
  store i32 %30, i32* %6, align 4
  br label %31

31:                                               ; preds = %22, %4
  %32 = load %struct.nicvf*, %struct.nicvf** %5, align 8
  %33 = getelementptr inbounds %struct.nicvf, %struct.nicvf* %32, i32 0, i32 0
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* %10, align 4
  %38 = load i32, i32* @DMA_FROM_DEVICE, align 4
  %39 = load i32, i32* @DMA_ATTR_SKIP_CPU_SYNC, align 4
  %40 = call i32 @dma_unmap_page_attrs(i32* %35, i32 %36, i32 %37, i32 %38, i32 %39)
  br label %41

41:                                               ; preds = %31, %21
  ret void
}

declare dso_local %struct.page* @virt_to_page(i32) #1

declare dso_local i32 @phys_to_virt(i32) #1

declare dso_local i32 @page_ref_count(%struct.page*) #1

declare dso_local i32 @dma_unmap_page_attrs(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
